# voice-chatbot-multiplatform

./: README.md  env.example  pyproject.toml  requirements.txt
core/: __init__.py  config.py  llm_engine.py
